# Makerfabs-ESP32-S3-Parallel-TFT-with-Touch

./: readme.md
Christmas Day/libraries/lvgl/src/: lv_conf.h
Christmas Day/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Christmas Day/libraries/ui/src/components/: ui_comp_hook.c
Christmas Day/libraries/ui/src/images/: ui_img_ball_png.c  ui_img_kids_png.c  ui_img_m_png.c  ui_img_santa_hat_png.c  ui_img_socks_png.c  ui_img_tree_png.c
Christmas Day/libraries/ui/src/screens/: ui_Screen1.c
Christmas Day/ui/: FT6236.h  ui.ino
PlatformIO/ESP32S3_SGP30_WEBSERVER_V1.2/: platformio.ini
PlatformIO/ESP32S3_SGP30_WEBSERVER_V1.2/src/: main.cpp
PlatformIO/ESP32S3_dgp30_WEBSERVER_V1.2/src/: S3_Parallel16_ili9488.h
PlatformIO/Touch_keyboard_v2/: platformio.ini
PlatformIO/Touch_keyboard_v2/src/: Parallel16_9488.h  main.cpp
Run LVGL On Matouch Display/: README.md
Run LVGL On Matouch Display/libraries/: lv_conf.h
Run LVGL On Matouch Display/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
Run LVGL On Matouch Display/libraries/ui/src/components/: ui_comp_hook.c
Run LVGL On Matouch Display/libraries/ui/src/images/: ui_img_1007778214.c  ui_img_3_png.c  (+16 more)
Run LVGL On Matouch Display/ui/: FT6236.cpp  S3_Parallel16_ili9488.h  ui.ino
example/ESP32S3_SGP30_WEBSERVER_V1.2/: ESP32S3_SGP30_WEBSERVER_V1.2.ino  S3_Parallel16_ili9488.h
example/PDQgraphicstest/: PDQgraphicstest.ino
example/esp-idf/lvgl9_demo/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
example/esp-idf/lvgl9_demo/components/bsp/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
example/esp-idf/lvgl9_demo/components/bsp/audio/: bsp_wav.h
example/esp-idf/lvgl9_demo/components/bsp/bsp_spiffs/: bsp_spiffs.c
example/esp-idf/lvgl9_demo/components/bsp/pcf85063a/: bsp_pcf85063a.h
example/esp-idf/lvgl9_demo/components/bsp/qmi8658/: bsp_qmi8658.h
example/esp-idf/lvgl9_demo/components/bsp/sdcard/: bsp_sdcard.c
example/esp-idf/lvgl9_demo/main/: CMakeLists.txt  Kconfig.projbuild  main.c
example/esp-idf/lvgl9_demo/main/boards/matouch-2-8-s3/: board.h
example/esp-idf/lvgl9_demo/main/boards/matouch-3-16-s3/: board.h  config.h  matouch_3_16_s3.c
example/esp-idf/lvgl9_demo/main/boards/matouch-3-5-spi-s3/: config.h  matouch_3_5_spi_s3.c
example/esp-idf/lvgl9_demo/main/display/v8/: lcd_display.c  lcd_display.h
example/esp-idf/lvgl9_demo/main/display/v9/: lcd_display.c
example/esp-idf/lvgl9_demo/main/release/matouch-1-8-s3/assets/: img_5.c
example/esp-idf/lvgl9_demo/main/release/matouch-2-8-s3/: release.c
example/esp-idf/lvgl9_demo/main/release/matouch-3-16-s3/: release.c
example/esp-idf/lvgl9_demo/main/release/matouch-3-16-s3/assets/: img2.c  img4.c  img5.c
example/esp-idf/lvgl9_demo/main/release/matouch-3-5-spi-s3/: release.c
example/esp-idf/sd_img/: .gitignore  CMakeLists.txt  README.md  partitions.csv
example/esp-idf/sd_img/main/: idf_component.yml
example/touch_keyboard/: Button.cpp  Button.h  Parallel16_9488.h  touch_keyboard.ino
example/touch_keyboard_v2/: touch_keyboard_v2.ino
firmware/SD16_3.5/: SD16_3.5.ino
hardware/: ESP32-S3 Parallel TFT with Touch 3.5'' ili9488 v2.0.brd  ESP32-S3 Parallel TFT with Touch 3.5'' ili9488 v2.0.sch  ESP32-S3 Parallel TFT with Touch v1.0(3.5'' ili9488).brd  ESP32-S3 Parallel TFT with Touch v1.0(3.5'' ili9488).sch
(+29 files in other folders)
